--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
     </div>
 
     <script src="function.js"></script>
+    <script src="drivers.js"></script>
     <script>
         function updateGradient() {
             const c1 = document.getElementById('color1').value;
